tests/basic/check/eq/100.pan.out
tests/basic/check/eq/100.pan:4:1-5: error: unable to verify type of f100
tests/basic/check/eq/100.pan:7:1-5: error: unable to verify type of f101
tests/basic/check/eq/100.pan:10:1-5: error: unable to verify type of f102
tests/basic/check/eq/100.pan:13:1-5: error: unable to verify type of f103
tests/basic/check/eq/100.pan:16:1-5: error: unable to verify type of f104
tests/basic/check/eq/100.pan:19:1-5: error: unable to verify type of f105
tests/basic/check/eq/100.pan:22:1-5: error: unable to verify type of f106
tests/basic/check/eq/100.pan:25:1-5: error: unable to verify type of f107